joint stats generated

--- a/PET SUV Statistics.ipynb
+++ b/PET SUV Statistics.ipynb
@@ -3611,9 +3611,11 @@
    ],
    "source": [
     "import numpy as np\n",
-    "suv_dict = np.load('E:/UC Davis COVID Study/Segmentations and PET NIFTIs/Edited Organs/Organ Statistics/brain_true_suv_stats.npy', allow_pickle='TRUE').item()\n",
-    "data = suv_dict['COVID Patients_1697954_FDG_COVID_Pt002_JP_20130223.nii.gz'] # displays \"world\"\n",
-    "extractPatientStats(data, 'brain', 'mean')\n",
+    "suv_dict = np.load('D:/Documents/Repos/PET_Segmentation_Statistics/Psoriasis Statistics/site_1002_joint_suv_stats.npy', allow_pickle='TRUE').item()\n",
+    "print(suv_dict)\n",
+    "\n",
+    "# data = suv_dict['COVID Patients_1697954_FDG_COVID_Pt002_JP_20130223.nii.gz'] # displays \"world\"\n",
+    "# extractPatientStats(data, 'brain', 'mean')\n",
     "#print(len(suv_dict['Healthy Controls_1341792-Sub005-A01-NE_20100912.nii.gz'])) # displays \"world\"\n"
    ]
   },
@@ -3745,7 +3747,7 @@
     }
    ],
    "source": [
-    "suv_dict = np.load('E:/UC Davis COVID Study/Segmentations and PET NIFTIs/Edited Organs/Organ Statistics/hips_suv_stats.npy', allow_pickle='TRUE').item()\n",
+    "suv_dict = np.load('D:/Documents/Repos/PET_Segmentation_Statistics/Psoriasis Statistics/site_1002_joint_suv_stats.npy', allow_pickle='TRUE').item()\n",
     "\n",
     "COVID_vals = []\n",
     "Healthy_vals = []\n",
